force-app/main/default/objects/Pokemon__c/Pokemon__c.object-meta.xml
<CustomObject>
    <label>Pokemon</label>
    <nameField>
        <displayFormat>PKMN-{0000}</displayFormat>
        <label>Pokemon Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pokemon</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>