force-app/main/default/objects/Pokemon__c/fields/Current_HP__c.field-meta.xml
<CustomField>
    <fullName>Current_HP__c</fullName>
    <label>Current HP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>