force-app/main/default/objects/Pokemon__c/fields/In_Party__c.field-meta.xml
<CustomField>
    <fullName>In_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Party?</label>
    <type>Checkbox</type>
</CustomField>