force-app/main/default/objects/Pokemon__c/fields/of_Moves__c.field-meta.xml
<CustomField>
    <fullName>of_Moves__c</fullName>
    <label># of Moves</label>
    <summaryForeignKey>Move__c.Pokemon__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>