force-app/main/default/objects/Pokemon__c/fields/Pokedex_Entry__c.field-meta.xml
<CustomField>
    <fullName>Pokedex_Entry__c</fullName>
    <label>Pokedex Entry</label>
    <referenceTo>Pokedex_Entry__c</referenceTo>
    <relationshipLabel>Pokemon</relationshipLabel>
    <relationshipName>Pokemon</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>