force-app/main/default/objects/Pokemon__c/fields/Pokemon_Name__c.field-meta.xml
<CustomField>
    <fullName>Pokemon_Name__c</fullName>
    <formula>Pokedex_Entry__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pokemon Name</label>
    <type>Text</type>
</CustomField>