force-app/main/default/objects/Pokemon__c/fields/Sprite_Back_URL__c.field-meta.xml
<CustomField>
    <fullName>Sprite_Back_URL__c</fullName>
    <formula>Pokedex_Entry__r.Sprite_Back_URL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sprite Back URL</label>
    <type>Text</type>
</CustomField>