force-app/main/default/objects/Pokemon__c/validationRules/preventMoreThan4Moves.validationRule-meta.xml
<ValidationRule>
    <fullName>preventMoreThan4Moves</fullName>
    <active>true</active>
    <errorConditionFormula>of_Moves__c &gt; 4</errorConditionFormula>
    <errorMessage>Pokemon can have no more than 4 moves</errorMessage>
</ValidationRule>