force-app/main/default/objects/Pokemon__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pokedex_Entry__c</columns>
    <columns>Sprite__c</columns>
    <columns>Owner__c</columns>
    <columns>Max_HP__c</columns>
    <columns>Current_HP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>