force-app/main/default/objects/Pokemon__c/listViews/My_Pokemon.listView-meta.xml
<ListView>
    <fullName>My_Pokemon</fullName>
    <columns>Sprite__c</columns>
    <columns>Pokedex_Entry__c</columns>
    <columns>Owner__c</columns>
    <columns>NAME</columns>
    <columns>Level__c</columns>
    <columns>Current_HP__c</columns>
    <columns>Max_HP__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>In_Party__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Owner__c</field>
        <operation>equals</operation>
        <value>Andrew Pickett</value>
    </filters>
    <label>My Party Pokemon</label>
</ListView>